--- a/dreamrs/templates/base/base.html
+++ b/dreamrs/templates/base/base.html
@@ -21,6 +21,8 @@
    <link rel="stylesheet" href="{% static 'css/flaticon.css' %}">
    <!-- magnific-popup CSS -->
    <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
+   <!-- slick CSS -->
+   <link rel="stylesheet" href="{% static 'css/slick.css' %}">
    <!-- font awesome CSS -->
    <link rel="stylesheet" href="{% static 'fontawesome/css/all.min.css' %}">
    <!-- style CSS -->
@@ -176,6 +178,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
    <script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
    <!-- carousel js -->
    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+   <script src="{% static 'js/slick.min.js' %}"></script>
    <!-- easing js -->
    <script src="{% static 'js/jquery.easing.min.js' %}"></script>
    <!--masonry js-->
