--- a/dreamrs/templates/pages/service/services.html
+++ b/dreamrs/templates/pages/service/services.html
@@ -18,147 +18,13 @@
         </div>
     </section>
     <!--::breadcrumb part start::-->
-
-    <!--::service part end::-->
-    <section class="service_part section-padding">
-        <div class="container">
-            <div class="row justify-content-between align-items-center">
-                <div class="col-lg-7 col-xl-6">
-                    <div class="section_tittle">
-                        <h2>our <span>services</span></h2>
-                    </div>
-                    <div class="service_part_iner">
-                        <div class="row">
-                            <div class="col-lg-6 col-sm-6">
-                                <div class="single_service_text ">
-                                    <img src="{% static 'img/icon/service_1.svg' %}" alt="">
-                                    <h4>house Planning</h4>
-                                    <p>Lorem ipsum dolor sit amet consectetur elit seiusmod tempor incididunt </p>
-                                </div>
-                            </div>
-                            <div class="col-lg-6 col-sm-6">
-                                <div class="single_service_text">
-                                    <img src="{% static 'img/icon/service_2.svg' %}" alt="">
-                                    <h4>house Build</h4>
-                                    <p>Lorem ipsum dolor sit amet consectetur elit seiusmod tempor incididunt</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-6 col-sm-6">
-                                <div class="single_service_text">
-                                    <img src="{% static 'img/icon/service_3.svg' %}" alt="">
-                                    <h4>Design&
-                                        Build</h4>
-                                    <p>Lorem ipsum dolor sit amet consectetur elit seiusmod tempor incididunt</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-6 col-sm-6">
-                                <div class="single_service_text">
-                                    <img src="{% static 'img/icon/service_4.svg' %}" alt="">
-                                    <h4>Design&
-                                        Build</h4>
-                                    <p>Lorem ipsum dolor sit amet consectetur elit seiusmod tempor incididunt</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-10">
-                    <div class="service_text">
-                        <h2>Hello City We are
-                            leader in <span> Services.</span></h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipi scing elit,
-                            sed do eiusmodtemporincididunt u labore et dolore magna aliqua.
-                            Quis ipsum pendisse ultrices gravida. Risus commodo viverra
-                            maecenas accumsan lacus vel </p>
-                        <a href="service.html" class="btn_1">learn more</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--::service part end::-->
-
+    
+   <!--::service part start::-->
+   {% include 'include/service_items.html' %}
+   <!--::service part end::-->
 
     <!--::review_part start::-->
-    <section class="review_part padding_bottom">
-        <div class="container-fluid">
-            <div class="row justify-content-center">
-                <div class="col-xl-6 col-sm-6">
-                    <div class="section_tittle text-center">
-                        <h2>Testimonial</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-11 col-sm-8">
-                    <!-- THUMBNAILS -->
-                    <div class="slider-nav-thumbnails">
-                        <div class="slider-thumbnails">
-                            <img src="{% static 'img/client/client_1.png' %}" alt="slideimg" class="image">
-                        </div>
-                        <div class="slider-thumbnails">
-                            <img src="{% static 'img/client/client_2.png' %}" alt="slideimg" class="image">
-                        </div>
-                        <div class="slider-thumbnails">
-                            <img src="{% static 'img/client/client_3.png' %}" alt="slideimg" class="image">
-                        </div>
-                        <div class="slider-thumbnails">
-                            <img src="{% static 'img/client/client_2.png' %}" alt="slideimg" class="image">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-7 col-sm-10">
-                    <!-- MAIN SLIDES -->
-                    <div class="slider">
-                        <div data-index="1">
-                            <div class="client_review_text text-center">
-                                <h3>Daniel E Gilcritst</h3>
-                                <h5>Manager, Vision</h5>
-                                <p>Enim a, scelerisque aliquet. Vivamus neque diam sed at, pede laoreet orci.
-                                    Potenti vel In sagittis nulla augue vitae et tempus torquent. Lacinia neque
-                                    mus taciti ante prsent at facilisis. Enim a, scelerisque aliquet. Vivamus neque
-                                    diam sed at, pede laoreet orci Potti, vel. In sagittis nulla augue vitae et
-                                    tempus torquent. </p>
-                            </div>
-                        </div>
-                        <div data-index="2">
-                            <div class="client_review_text text-center">
-                                <h3>Daniel E Gilcritst</h3>
-                                <h5>Manager, Vision</h5>
-                                <p> Vivamus neque diam sed at, pede laoreet orci. Potenti
-                                    vel In sagittis nulla augue vitae et tempus torquent. Lacinia neque mus taciti
-                                    ante prsent at facilisis. Enim a, scelerisque aliquet. Vivamus neque diam sed at,
-                                    pede laoreet orci Potti, vel. In sagittis nulla augue vitae et tempus torquent. Enim
-                                    a,
-                                    scelerisque aliquet. </p>
-                            </div>
-                        </div>
-                        <div data-index="3">
-                            <div class="client_review_text text-center">
-                                <h3>Daniel E Gilcritst</h3>
-                                <h5>Manager, Vision</h5>
-                                <p>Enim a, scelerisque aliquet. Vivamus neque diam sed at, pede laoreet orci. Potenti
-                                    vel In sagittis nulla augue vitae et tempus torquent. Lacinia neque mus taciti
-                                    ante prsent at facilisis. Enim a, scelerisque aliquet. Vivamus neque diam sed at,
-                                    pede laoreet orci Potti, vel. In sagittis nulla augue vitae et tempus torquent. </p>
-                            </div>
-                        </div>
-                        <div data-index="4">
-                            <div class="client_review_text text-center">
-                                <h3>Daniel E Gilcritst</h3>
-                                <h5>Manager, Vision</h5>
-                                <p>Vivamus neque diam sed at, pede laoreet orci. Potenti
-                                    vel In sagittis nulla augue vitae et tempus torquent. Lacinia neque mus taciti
-                                    ante prsent at facilisis. Enim a, scelerisque aliquet. Vivamus neque diam sed at,
-                                    pede laoreet orci Potti, vel. In sagittis nulla augue vitae et tempus torquent Enima,
-                                    scelerisque aliquet. </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    {% include "include/temoignage_items.html" %}
     <!--::review_part end::-->
 
 {% endblock %}
