--- a/dreamrs/templates/pages/website/about.html
+++ b/dreamrs/templates/pages/website/about.html
@@ -63,162 +63,12 @@
    <!--::team part end::-->
 
    <!--::team part end::-->
-   <section class="project_gallery padding_bottom">
-      <div class="container-fluid">
-         <div class="row">
-            <div class="col-lg-12">
-               <div class="project_gallery_tittle">
-                  <h2><span>Luxuries</span> Apartment</h2>
-               </div>
-               <div class="grid">
-                  <div class="grid-sizer"></div>
-                  <div class="grid-item big_weight">
-                     <div class="project_img">
-                        <img src="{% static 'img/gallery/gallery_1.png' %}" alt="">
-                        <div class="project_gallery_hover_text">
-                           <p>Home Apartment</p>
-                           <h3>Detached House For Sale </h3>
-                           <ul>
-                              <li><a href=""><span class="flaticon-bath"></span></a> 04</li>
-                              <li><a href=""><span class="flaticon-bed"></span></a> 03</li>
-                              <li><a href=""><span class="flaticon-frame"></span></a> 2400 sqft</li>
-                              <li><a href=""><span class="ti-heart"></span></a> like</li>
-                           </ul>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="grid-item big_height">
-                     <div class="project_img">
-                        <img src="{% static 'img/gallery/gallery_4.png' %}" alt="">
-                        <div class="project_gallery_hover_text">
-                           <p>Home Apartment</p>
-                           <h3>Detached House For Sale </h3>
-                           <ul>
-                              <li><a href=""><span class="flaticon-bath"></span></a> 04</li>
-                              <li><a href=""><span class="flaticon-bed"></span></a> 03</li>
-                              <li><a href=""><span class="flaticon-frame"></span></a> 2400 sqft</li>
-                              <li><a href=""><span class="ti-heart"></span></a> like</li>
-                           </ul>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="grid-item">
-                     <div class="project_img">
-                        <img src="{% static 'img/gallery/gallery_2.png' %}" alt="">
-                        <div class="project_gallery_hover_text">
-                           <p>Home Apartment</p>
-                           <h3>Detached House For Sale </h3>
-                           <ul>
-                              <li><a href=""><span class="flaticon-bath"></span></a> 04</li>
-                              <li><a href=""><span class="flaticon-bed"></span></a> 03</li>
-                              <li><a href=""><span class="flaticon-frame"></span></a> 2400 sqft</li>
-                              <li><a href=""><span class="ti-heart"></span></a> like</li>
-                           </ul>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="grid-item">
-                     <div class="project_img">
-                        <img src="{% static 'img/gallery/gallery_3.png' %}" alt="">
-                        <div class="project_gallery_hover_text">
-                           <p>Home Apartment</p>
-                           <h3>Detached House For Sale </h3>
-                           <ul>
-                              <li><a href=""><span class="flaticon-bath"></span></a> 04</li>
-                              <li><a href=""><span class="flaticon-bed"></span></a> 03</li>
-                              <li><a href=""><span class="flaticon-frame"></span></a> 2400 sqft</li>
-                              <li><a href=""><span class="ti-heart"></span></a> like</li>
-                           </ul>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-   </section>
+   {% include "include/apartment_items.html" %}
    <!--::team part end::-->
 
 
    <!--::review_part start::-->
-   <section class="review_part padding_bottom">
-      <div class="container-fluid">
-         <div class="row justify-content-center">
-            <div class="col-xl-6 col-sm-6">
-               <div class="section_tittle text-center">
-                  <h2>Testimonial</h2>
-               </div>
-            </div>
-         </div>
-         <div class="row justify-content-center">
-            <div class="col-lg-11 col-sm-8">
-               <!-- THUMBNAILS -->
-               <div class="slider-nav-thumbnails">
-                  <div class="slider-thumbnails">
-                     <img src="{% static 'img/client/client_1.png' %}" alt="slideimg" class="image">
-                  </div>
-                  <div class="slider-thumbnails">
-                     <img src="{% static 'img/client/client_2.png' %}" alt="slideimg" class="image">
-                  </div>
-                  <div class="slider-thumbnails">
-                     <img src="{% static 'img/client/client_3.png' %}" alt="slideimg" class="image">
-                  </div>
-                  <div class="slider-thumbnails">
-                     <img src="{% static 'img/client/client_2.png' %}" alt="slideimg" class="image">
-                  </div>
-               </div>
-            </div>
-            <div class="col-lg-7 col-sm-10">
-               <!-- MAIN SLIDES -->
-               <div class="slider">
-                  <div data-index="1">
-                     <div class="client_review_text text-center">
-                        <h3>Daniel E Gilcritst</h3>
-                        <h5>Manager, Vision</h5>
-                        <p>Enim a, scelerisque aliquet. Vivamus neque diam sed at, pede laoreet orci.
-                           Potenti vel In sagittis nulla augue vitae et tempus torquent. Lacinia neque
-                           mus taciti ante prsent at facilisis. Enim a, scelerisque aliquet. Vivamus neque
-                           diam sed at, pede laoreet orci Potti, vel. In sagittis nulla augue vitae et
-                           tempus torquent. </p>
-                     </div>
-                  </div>
-                  <div data-index="2">
-                     <div class="client_review_text text-center">
-                        <h3>Daniel E Gilcritst</h3>
-                        <h5>Manager, Vision</h5>
-                        <p> Vivamus neque diam sed at, pede laoreet orci. Potenti
-                           vel In sagittis nulla augue vitae et tempus torquent. Lacinia neque mus taciti
-                           ante prsent at facilisis. Enim a, scelerisque aliquet. Vivamus neque diam sed at,
-                           pede laoreet orci Potti, vel. In sagittis nulla augue vitae et tempus torquent. Enim a,
-                           scelerisque aliquet. </p>
-                     </div>
-                  </div>
-                  <div data-index="3">
-                     <div class="client_review_text text-center">
-                        <h3>Daniel E Gilcritst</h3>
-                        <h5>Manager, Vision</h5>
-                        <p>Enim a, scelerisque aliquet. Vivamus neque diam sed at, pede laoreet orci. Potenti
-                           vel In sagittis nulla augue vitae et tempus torquent. Lacinia neque mus taciti
-                           ante prsent at facilisis. Enim a, scelerisque aliquet. Vivamus neque diam sed at,
-                           pede laoreet orci Potti, vel. In sagittis nulla augue vitae et tempus torquent. </p>
-                     </div>
-                  </div>
-                  <div data-index="4">
-                     <div class="client_review_text text-center">
-                        <h3>Daniel E Gilcritst</h3>
-                        <h5>Manager, Vision</h5>
-                        <p>Vivamus neque diam sed at, pede laoreet orci. Potenti
-                           vel In sagittis nulla augue vitae et tempus torquent. Lacinia neque mus taciti
-                           ante prsent at facilisis. Enim a, scelerisque aliquet. Vivamus neque diam sed at,
-                           pede laoreet orci Potti, vel. In sagittis nulla augue vitae et tempus torquent Enim a,
-                           scelerisque aliquet. </p>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-   </section>
+   {% include "include/temoignage_items.html" %}
    <!--::review_part end::-->
 
 {% endblock %}
