--- a/dreamrs/templates/include/apartment_items.html
+++ b/dreamrs/templates/include/apartment_items.html
@@ -9,66 +9,25 @@
                </div>
                <div class="grid">
                   <div class="grid-sizer"></div>
-                  <div class="grid-item big_weight">
-                     <div class="project_img">
-                        <img src="{% static 'img/gallery/gallery_1.png' %}" alt="">
-                        <div class="project_gallery_hover_text">
-                           <p>Home Apartment</p>
-                           <h3><a href="{% url 'apartment' %}"> Detached House For Sale</a></h3>
-                           <ul>
-                              <li><a href=""><span class="flaticon-bath"></span></a> 04</li>
-                              <li><a href=""><span class="flaticon-bed"></span></a> 03</li>
-                              <li><a href=""><span class="flaticon-frame"></span></a> 2400 sqft</li>
-                              <li><a href=""><span class="ti-heart"></span></a> like</li>
-                           </ul>
+
+                  {% for apartment in apartments %}
+                     <div class="{% cycle 'grid-item big_weight' 'grid-item big_weight' 'grid-item' 'grid-item' %}">
+                        <div class="project_img">
+                           <img src="{{ apartment.image.url }}" alt="">
+                           <div class="project_gallery_hover_text">
+                              <p>Home Apartment</p>
+                              <h3><a href="{% url 'apartment' %}"> {{ apartment.type_apart }}</a></h3>
+                              <ul>
+                                 <li><a href=""><span class="flaticon-bath"></span></a> {{ apartment.nombre_salle_bain }}</li>
+                                 <li><a href=""><span class="flaticon-bed"></span></a> {{ apartment.nombre_chambre }}</li>
+                                 <li><a href=""><span class="flaticon-frame"></span></a> {{ apartment.nombre_fenetre }} sqft</li>
+                                 <li><a href=""><span class="ti-heart"></span></a> like</li>
+                              </ul>
+                           </div>
                         </div>
                      </div>
-                  </div>
-                  <div class="grid-item big_height">
-                     <div class="project_img">
-                        <img src="{% static 'img/gallery/gallery_4.png' %}" alt="">
-                        <div class="project_gallery_hover_text">
-                           <p>Home Apartment</p>
-                           <h3><a href="{% url 'apartment' %}"> Detached House For Sale</a></h3>
-                           <ul>
-                              <li><a href=""><span class="flaticon-bath"></span></a> 04</li>
-                              <li><a href=""><span class="flaticon-bed"></span></a> 03</li>
-                              <li><a href=""><span class="flaticon-frame"></span></a> 2400 sqft</li>
-                              <li><a href=""><span class="ti-heart"></span></a> like</li>
-                           </ul>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="grid-item">
-                     <div class="project_img">
-                        <img src="{% static 'img/gallery/gallery_2.png' %}" alt="">
-                        <div class="project_gallery_hover_text">
-                           <p>Home Apartment</p>
-                           <h3><a href="{% url 'apartment' %}"> Detached House For Sale</a></h3>
-                           <ul>
-                              <li><a href=""><span class="flaticon-bath"></span></a> 04</li>
-                              <li><a href=""><span class="flaticon-bed"></span></a> 03</li>
-                              <li><a href=""><span class="flaticon-frame"></span></a> 2400 sqft</li>
-                              <li><a href=""><span class="ti-heart"></span></a> like</li>
-                           </ul>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="grid-item">
-                     <div class="project_img">
-                        <img src="{% static 'img/gallery/gallery_3.png' %}" alt="">
-                        <div class="project_gallery_hover_text">
-                           <p>Home Apartment</p>
-                           <h3><a href="{% url 'apartment' %}"> Detached House For Sale</a></h3>
-                           <ul>
-                              <li><a href=""><span class="flaticon-bath"></span></a> 04</li>
-                              <li><a href=""><span class="flaticon-bed"></span></a> 03</li>
-                              <li><a href=""><span class="flaticon-frame"></span></a> 2400 sqft</li>
-                              <li><a href=""><span class="ti-heart"></span></a> like</li>
-                           </ul>
-                        </div>
-                     </div>
-                  </div>
+                  {% endfor %}
+
                </div>
             </div>
          </div>
