--- a/dreamrs/templates/include/temoignage_items.html
+++ b/dreamrs/templates/include/temoignage_items.html
@@ -13,66 +13,28 @@
             <div class="col-lg-11 col-sm-8">
                 <!-- THUMBNAILS -->
                 <div class="slider-nav-thumbnails">
-                    <div class="slider-thumbnails">
-                        <img src="{% static 'img/client/client_1.png' %}" alt="slideimg" class="image">
-                    </div>
-                    <div class="slider-thumbnails">
-                        <img src="{% static 'img/client/client_2.png' %}" alt="slideimg" class="image">
-                    </div>
-                    <div class="slider-thumbnails">
-                        <img src="{% static 'img/client/client_3.png' %}" alt="slideimg" class="image">
-                    </div>
-                    <div class="slider-thumbnails">
-                        <img src="{% static 'img/client/client_2.png' %}" alt="slideimg" class="image">
-                    </div>
+                    
+                    {% for temoignage in temoignages %}
+                        <div class="slider-thumbnails">
+                            <img src="{{ temoignage.photo.url }}" alt="slideimg" class="image">
+                        </div>      
+                    {% endfor %}
+                    
                 </div>
             </div>
             <div class="col-lg-7 col-sm-10">
                 <!-- MAIN SLIDES -->
                 <div class="slider">
-                    <div data-index="1">
-                        <div class="client_review_text text-center">
-                        <h3>Daniel E Gilcritst</h3>
-                        <h5>Manager, Vision</h5>
-                        <p>Enim a, scelerisque aliquet. Vivamus neque diam sed at, pede laoreet orci.
-                            Potenti vel In sagittis nulla augue vitae et tempus torquent. Lacinia neque
-                            mus taciti ante prsent at facilisis. Enim a, scelerisque aliquet. Vivamus neque
-                            diam sed at, pede laoreet orci Potti, vel. In sagittis nulla augue vitae et
-                            tempus torquent. </p>
+                    {% for temoignage in temoignages %}
+                        <div data-index="{{ forloop.counter }}">
+                            <div class="client_review_text text-center">
+                            <h3>{{ temoignage }}</h3>
+                            <h5>{{ temoignage.metier }}</h5>
+                            <p>{{ temoignage.message }}</p>
+                            </div>
                         </div>
-                    </div>
-                    <div data-index="2">
-                        <div class="client_review_text text-center">
-                        <h3>Daniel E Gilcritst</h3>
-                        <h5>Manager, Vision</h5>
-                        <p> Vivamus neque diam sed at, pede laoreet orci. Potenti
-                            vel In sagittis nulla augue vitae et tempus torquent. Lacinia neque mus taciti
-                            ante prsent at facilisis. Enim a, scelerisque aliquet. Vivamus neque diam sed at,
-                            pede laoreet orci Potti, vel. In sagittis nulla augue vitae et tempus torquent. Enim a,
-                            scelerisque aliquet. </p>
-                        </div>
-                    </div>
-                    <div data-index="3">
-                        <div class="client_review_text text-center">
-                        <h3>Daniel E Gilcritst</h3>
-                        <h5>Manager, Vision</h5>
-                        <p>Enim a, scelerisque aliquet. Vivamus neque diam sed at, pede laoreet orci. Potenti
-                            vel In sagittis nulla augue vitae et tempus torquent. Lacinia neque mus taciti
-                            ante prsent at facilisis. Enim a, scelerisque aliquet. Vivamus neque diam sed at,
-                            pede laoreet orci Potti, vel. In sagittis nulla augue vitae et tempus torquent. </p>
-                        </div>
-                    </div>
-                    <div data-index="4">
-                        <div class="client_review_text text-center">
-                        <h3>Daniel E Gilcritst</h3>
-                        <h5>Manager, Vision</h5>
-                        <p>Vivamus neque diam sed at, pede laoreet orci. Potenti
-                            vel In sagittis nulla augue vitae et tempus torquent. Lacinia neque mus taciti
-                            ante prsent at facilisis. Enim a, scelerisque aliquet. Vivamus neque diam sed at,
-                            pede laoreet orci Potti, vel. In sagittis nulla augue vitae et tempus torquent Enim a,
-                            scelerisque aliquet. </p>
-                        </div>
-                    </div>
+                    {% endfor %}
+                    
                 </div>
             </div>
             </div>
