--- a/dreamrs/templates/base/base.html
+++ b/dreamrs/templates/base/base.html
@@ -10,6 +10,7 @@
    <title>Real_state || Home</title>
    <link rel="icon" href="{% static 'img/favicon.png' %}">
    <!-- Bootstrap CSS -->
+   <link rel="stylesheet" href="{% static 'css/master.css' %}">
    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
    <!-- animate CSS -->
    <link rel="stylesheet" href="{% static 'css/animate.css' %}">
@@ -36,7 +37,7 @@
          <div class="row">
             <div class="col-lg-12">
                <nav class="navbar navbar-expand-lg navbar-light">
-                  <a class="navbar-brand" href="{% url 'home' %}"> <img src="{% static 'img/logo.png' %}" alt="logo"> </a>
+                  <a class="navbar-brand" href="{% url 'home' %}"> <img src="{{ site_info.icon.url }}" alt="logo"> </a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                      <span class="navbar-toggler-icon"></span>
@@ -59,7 +60,6 @@
                            </a>
                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                               <a class="dropdown-item" href="{% url 'blog' %}">blog</a>
-                              <a class="dropdown-item" href="{% url 'single' %}">Single blog</a>
                            </div>
                         </li>
                         <li class="nav-item dropdown">
@@ -70,6 +70,11 @@
                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                               <a class="dropdown-item" href="{% url 'project' %}">Project</a>
                               <a class="dropdown-item" href="{% url 'apartment' %}">Apartment</a>
+                              {% if user.is_authenticated %}
+                                 <a class="dropdown-item" href="{% url 'logout' %}">Déconnexion</a>
+                              {% else %}
+                                 <a class="dropdown-item" href="{% url 'login' %}">Connexion</a>
+                              {% endif %}
                            </div>
                         </li>
                         <li class="nav-item">
@@ -101,13 +106,12 @@
             <div class="col-sm-6 col-lg-3">
                <div class="single_footer_part">
                   <h4>About Us</h4>
-                  <p>Heaven fruitful doesn't over lesser days appear creeping seasons so behold bearing days open</p>
+                  <p>{{ site_info.description }}</p>
                   <div class="footer_icon social_icon">
                      <ul class="list-unstyled">
-                        <li><a href="#" class="single_social_icon"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#" class="single_social_icon"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#" class="single_social_icon"><i class="fas fa-globe"></i></a></li>
-                        <li><a href="#" class="single_social_icon"><i class="fab fa-behance"></i></a></li>
+                        {% for social in social_account %}
+                           <li><a href="{{ social.lien }}" class="single_social_icon"><i class="{{ social.icon }}"></i></a></li>
+                        {% endfor %}
                      </ul>
                   </div>
                </div>
@@ -115,10 +119,9 @@
             <div class="col-sm-6 col-lg-3">
                <div class="single_footer_part">
                   <h4>Contact Info</h4>
-                  <p>Address : Your address goes
-                     here, your demo address.</p>
-                  <p>Phone : +8880 44338899</p>
-                  <p>Email : info@colorlib.com</p>
+                  <p>Address : {{ site_info.adresse }}</p>
+                  <p>Phone : {{ site_info.phone }}</p>
+                  <p>Email : {{ site_info.email }}</p>
                </div>
             </div>
             <div class="col-sm-6 col-lg-3">
@@ -139,15 +142,20 @@
                   <p>Heaven fruitful doesn't over lesser in days. Appear creeping seasons deve behold bearing days open
                   </p>
                   <div id="mc_embed_signup">
-                     <form target="_blank"
-                        action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                        method="get" class="subscribe_form relative mail_part" required>
-                        <input type="email" name="email" id="newsletter-form-email" placeholder="Email Address"
-                           class="placeholder hide-on-focus" onfocus="this.placeholder = ''" onblur="this.placeholder = ' Email Address '"
-                           required="" type="email">
-                        <button type="submit" name="submit" id="newsletter-submit"
-                           class="email_icon newsletter-submit button-contactForm"><i
-                              class="far fa-paper-plane"></i></button>
+                     <form action="{% url 'newsletter' %}" method="POST" class="subscribe_form relative mail_part">
+                        {% csrf_token %}
+                        <input 
+                           type="email" 
+                           name="newsletter" 
+                           id="newsletter-form-email" 
+                           placeholder="Email Address" 
+                           onfocus="this.placeholder=''" 
+                           onblur="this.placeholder=' Email Address '" 
+                           required>
+                        <button type="submit"
+                           class="email_icon newsletter-submit button-contactForm">
+                           <i class="far fa-paper-plane"></i>
+                        </button>
                         <div class="mt-10 info"></div>
                      </form>
                   </div>
