--- a/dreamrs/templates/include/project_items.html
+++ b/dreamrs/templates/include/project_items.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% regroup projects|dictsort:"type_projet.name" by type_projet as project_list %}
 
     <section class="portfolio_area section-padding ">
         <div class="container">
@@ -10,230 +11,80 @@
                     <div class="portfolio-filter">
                         <h2>Hello City We are <br>
                             leader in <span>Projects .</span></h2>
+
                         <ul class="nav nav-tabs" id="myTab" role="tablist">
-                            <li>
-                                <a class="active" id="Architecture-tab" data-toggle="tab" href="#Architecture"
-                                    role="tab" aria-controls="Architecture" aria-selected="true">
-                                    Architecture
-                                </a>
-                            </li>
-                            <li>
-                                <a id="Interior-tab" data-toggle="tab" href="#Interior" role="tab"
-                                    aria-controls="Interior" aria-selected="false">
-                                    Interior
-                                </a>
-                            </li>
-                            <li>
-                                <a id="Exterior-tab" data-toggle="tab" href="#Exterior" role="tab"
-                                    aria-controls="Exterior" aria-selected="false">
-                                    Exterior
-                                </a>
-                            </li>
-                            <li>
-                                <a id="Landing-tab" data-toggle="tab" href="#Landing" role="tab" aria-controls="Landing"
-                                    aria-selected="false">
-                                    Drafting Landing
-                                </a>
-                            </li>
+                            
+                            {% for project in project_list %}
+                                <li>
+                                    {% if forloop.first %}
+                                        <a class="active" id="{{ project.grouper|slugify }}-tab" data-toggle="tab" href="#{{ project.grouper|slugify }}"
+                                        role="tab" aria-controls="{{ project.grouper|slugify }}" aria-selected="true">
+                                    {% else %}
+                                        <a id="{{ project.grouper|slugify }}-tab" data-toggle="tab" href="#{{ project.grouper|slugify }}"
+                                        role="tab" aria-controls="{{ project.grouper|slugify }}" aria-selected="false">
+                                    {% endif %}
+                                        {{ project.grouper }}
+                                    </a>
+                                </li>
+                            {% endfor %}
+
                         </ul>
+
                     </div>
+                        
                     <div class="portfolio_item tab-content" id="myTabContent">
-                        <div class="row align-items-center justify-content-between tab-pane fade show active"
-                            id="Architecture" role="tabpanel" aria-labelledby="Architecture-tab">
+
+                        {% for project_group in project_list %}
+                            
+                            {% if forloop.first %}
+                            <div class="row align-items-center justify-content-between tab-pane fade show active"
+                                id="{{ project_group.grouper|slugify }}" role="tabpanel" aria-labelledby="{{ project_group.grouper|slugify }}-tab">
+                            {% else %}
+                            <div class="row align-items-center justify-content-between tab-pane fade"
+                                id="{{ project_group.grouper|slugify }}" role="tabpanel" aria-labelledby="{{ project_group.grouper|slugify }}-tab">
+                            {% endif %}
+
+                            
+                            {% for premier_projet in project_group.list|slice:":1" %}
                             <div class="col-lg-6 col-sm-12 col-md-6">
                                 <div class="portfolio_box">
-                                    <a href="{% static 'img/project-1.png' %}" class="img-gal">
+                                    <a href="{{ premier_projet.image.url }}" class="img-gal">
                                         <div class="single_portfolio">
-                                            <img class="img-fluid w-100" src="{% static 'img/project-1.png' %}" alt="">
-                                        </div>
-                                    </a>
-                                    <div class="short_info">
-                                        <p>Exclusive Project</p>
-                                        <h4><a href="#">Etiam tortor <br>
-                                                aliquet habitant</a></h4>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-5 col-md-6">
-                                <div class="row">
-                                    <div class="col-lg-12 col-sm-6 col-md-12 single_portfolio_project">
-                                        <div class="portfolio_box">
-                                            <a href="{% static 'img/project-2.png' %}" class="img-gal">
-                                                <div class="single_portfolio">
-                                                    <img class="img-fluid w-100" src="{% static 'img/project-2.png' %}" alt="">
-                                                </div>
-                                            </a>
-                                            <div class="short_info">
-                                                <p>new Project</p>
-                                                <h4><a href="#">Etiam tortor <br>
-                                                        aliquet habitant</a></h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12 col-sm-6 col-md-12 single_portfolio_project">
-                                        <div class="portfolio_box">
-                                            <a href="{% static 'img/project-3.png' %}" class="img-gal">
-                                                <div class="single_portfolio">
-                                                    <img class="img-fluid w-100" src="{% static 'img/project-3.png' %}" alt="">
-                                                </div>
-                                            </a>
-                                            <div class="short_info">
-                                                <p>Exclusive Project</p>
-                                                <h4><a href="#">Etiam tortor <br>
-                                                        aliquet habitant</a></h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row align-items-center justify-content-between tab-pane fade" id="Interior"
-                            role="tabpanel" aria-labelledby="Interior-tab">
-                            <div class="col-lg-6 col-sm-12 col-md-6">
-                                <div class="portfolio_box">
-                                    <a href="{% static 'img/project-2.png' %}" class="img-gal">
-                                        <div class="single_portfolio">
-                                            <img class="img-fluid w-100" src="{% static 'img/project-2.png' %}" alt="">
+                                            <img class="img-fluid w-100" src="{{ premier_projet.image.url }}" alt="">
                                         </div>
                                     </a>
                                     <div class="short_info">
                                         <p>new Project</p>
-                                        <h4><a href="#">Etiam tortor <br>
-                                                aliquet habitant</a></h4>
+                                        <h4><a href="#">{{ premier_projet.titre }}</a></h4>
                                     </div>
                                 </div>
                             </div>
+                            {% endfor %}
+                            
                             <div class="col-lg-5 col-md-6">
                                 <div class="row">
+                                    {% for project_item in project_group.list|slice:"1:" %}
                                     <div class="col-lg-12 col-sm-6 col-md-12 single_portfolio_project">
                                         <div class="portfolio_box">
-                                            <a href="{% static 'img/project-1.png' %}" class="img-gal">
+                                            <a href="{{ project_item.image.url }}" class="img-gal">
                                                 <div class="single_portfolio">
-                                                    <img class="img-fluid w-100" src="{% static 'img/project-1.png' %}" alt="">
+                                                    <img class="img-fluid w-100" src="{{ project_item.image.url }}" alt="">
                                                 </div>
                                             </a>
                                             <div class="short_info">
                                                 <p>new Project</p>
-                                                <h4><a href="#">Etiam tortor <br>
-                                                        aliquet habitant</a></h4>
+                                                <h4><a href="#">{{ project_item.titre }}</a></h4>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-12 col-sm-6 col-md-12 single_portfolio_project">
-                                        <div class="portfolio_box">
-                                            <a href="{% static 'img/project-3.png' %}" class="img-gal">
-                                                <div class="single_portfolio">
-                                                    <img class="img-fluid w-100" src="{% static 'img/project-3.png' %}" alt="">
-                                                </div>
-                                            </a>
-                                            <div class="short_info">
-                                                <p>new Project</p>
-                                                <h4><a href="#">Etiam tortor <br>
-                                                        aliquet habitant</a></h4>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    {% endfor %}
                                 </div>
                             </div>
+
                         </div>
-                        <div class="row align-items-center justify-content-between tab-pane fade" id="Exterior"
-                            role="tabpanel" aria-labelledby="Exterior-tab">
-                            <div class="col-lg-6 col-sm-12 col-md-6">
-                                <div class="portfolio_box">
-                                    <a href="{% static 'img/project-3.png' %}" class="img-gal">
-                                        <div class="single_portfolio">
-                                            <img class="img-fluid w-100" src="{% static 'img/project-3.png' %}" alt="">
-                                        </div>
-                                    </a>
-                                    <div class="short_info">
-                                        <p>new Project</p>
-                                        <h4><a href="#">Etiam tortor <br>
-                                                aliquet habitant</a></h4>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-5 col-md-6">
-                                <div class="row">
-                                    <div class="col-lg-12 col-sm-6 col-md-12 single_portfolio_project">
-                                        <div class="portfolio_box">
-                                            <a href="{% static 'img/project-2.png' %}" class="img-gal">
-                                                <div class="single_portfolio">
-                                                    <img class="img-fluid w-100" src="{% static 'img/project-2.png' %}" alt="">
-                                                </div>
-                                            </a>
-                                            <div class="short_info">
-                                                <p>new Project</p>
-                                                <h4><a href="#">Etiam tortor <br>
-                                                        aliquet habitant</a></h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12 col-sm-6 col-md-12 single_portfolio_project">
-                                        <div class="portfolio_box">
-                                            <a href="{% static 'img/project-1.png' %}" class="img-gal">
-                                                <div class="single_portfolio">
-                                                    <img class="img-fluid w-100" src="{% static 'img/project-1.png' %}" alt="">
-                                                </div>
-                                            </a>
-                                            <div class="short_info">
-                                                <p>new Project</p>
-                                                <h4><a href="#">Etiam tortor <br>
-                                                        aliquet habitant</a></h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row align-items-center justify-content-between tab-pane fade" id="Landing"
-                            role="tabpanel" aria-labelledby="Landing-tab">
-                            <div class="col-lg-6 col-sm-12 col-md-6">
-                                <div class="portfolio_box">
-                                    <a href="{% static 'img/project-1.png' %}" class="img-gal">
-                                        <div class="single_portfolio">
-                                            <img class="img-fluid w-100" src="{% static 'img/project-1.png' %}" alt="">
-                                        </div>
-                                    </a>
-                                    <div class="short_info">
-                                        <p>new Project</p>
-                                        <h4><a href="#">Etiam tortor <br>
-                                                aliquet habitant</a></h4>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-5 col-md-6">
-                                <div class="row">
-                                    <div class="col-lg-12 col-sm-6 col-md-12 single_portfolio_project">
-                                        <div class="portfolio_box">
-                                            <a href="{% static 'img/project-4.png' %}" class="img-gal">
-                                                <div class="single_portfolio">
-                                                    <img class="img-fluid w-100" src="{% static 'img/project-5.png' %}" alt="">
-                                                </div>
-                                            </a>
-                                            <div class="short_info">
-                                                <p>new Project</p>
-                                                <h4><a href="#">Etiam tortor <br>
-                                                        aliquet habitant</a></h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12 col-sm-6 col-md-12 single_portfolio_project">
-                                        <div class="portfolio_box">
-                                            <a href="{% static 'img/project-3.png' %}" class="img-gal">
-                                                <div class="single_portfolio">
-                                                    <img class="img-fluid w-100" src="{% static 'img/project-3.png' %}" alt="">
-                                                </div>
-                                            </a>
-                                            <div class="short_info">
-                                                <p>new Project</p>
-                                                <h4><a href="#">Etiam tortor <br>
-                                                        aliquet habitant</a></h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+
+                        {% endfor %}
+
                     </div>
                 </div>
             </div>
