--- a/dreamrs/templates/include/service_items.html
+++ b/dreamrs/templates/include/service_items.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load filtre_perso %}
 
    <section class="service_part section-padding">
       <div class="container">
@@ -9,47 +10,24 @@
                </div>
                <div class="service_part_iner">
                   <div class="row">
-                     <div class="col-lg-6 col-sm-6">
-                        <div class="single_service_text ">
-                           <img src="{% static 'img/icon/service_1.svg' %}" alt="">
-                           <h4>house Planning</h4>
-                           <p>Lorem ipsum dolor sit amet consectetur elit seiusmod tempor incididunt </p>
+
+                     {% for service in services %}
+                        <div class="col-lg-6 col-sm-6">
+                           <div class="single_service_text ">
+                              <img src="{% static 'img/icon/service_1.svg' %}" alt="">
+                              <h4>{{ service.nom }}</h4>
+                              <p>{{ service.description }}</p>
+                           </div>
                         </div>
-                     </div>
-                     <div class="col-lg-6 col-sm-6">
-                        <div class="single_service_text">
-                           <img src="{% static 'img/icon/service_2.svg' %}" alt="">
-                           <h4>house Build</h4>
-                           <p>Lorem ipsum dolor sit amet consectetur elit seiusmod tempor incididunt</p>
-                        </div>
-                     </div>
-                     <div class="col-lg-6 col-sm-6">
-                        <div class="single_service_text">
-                           <img src="{% static 'img/icon/service_3.svg' %}" alt="">
-                           <h4>Design&
-                              Build</h4>
-                           <p>Lorem ipsum dolor sit amet consectetur elit seiusmod tempor incididunt</p>
-                        </div>
-                     </div>
-                     <div class="col-lg-6 col-sm-6">
-                        <div class="single_service_text">
-                           <img src="{% static 'img/icon/service_4.svg' %}" alt="">
-                           <h4>Design&
-                              Build</h4>
-                           <p>Lorem ipsum dolor sit amet consectetur elit seiusmod tempor incididunt</p>
-                        </div>
-                     </div>
+                     {% endfor %}
+
                   </div>
                </div>
             </div>
             <div class="col-lg-4 col-sm-10">
                <div class="service_text">
-                  <h2>Hello City We are
-                     leader in <span> Services.</span></h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipi scing elit,
-                     sed do eiusmodtemporincididunt u labore et dolore magna aliqua.
-                     Quis ipsum pendisse ultrices gravida. Risus commodo viverra
-                     maecenas accumsan lacus vel </p>
+                  <h2>{{ about.service_title|reformate }}</h2>
+                  <p>{{ about.service_description }}</p>
                   <a href="service.html" class="btn_1">learn more</a>
                </div>
             </div>
